--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,8 @@
         android:allowBackup="true"
         android:icon="@drawable/owl"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/owl"
         android:largeHeap="true"
+        android:roundIcon="@drawable/owl"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name=".BeginActivity">
@@ -23,14 +23,15 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".LearnActivity" />
         <activity android:name=".CameraActivity" />
         <activity
             android:name=".CropImageActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".HistoryActivity" />
         <activity android:name=".ViewHistoryActivity" />
-        <activity android:name=".StartActivity"></activity>
+        <activity android:name=".StartActivity" />
+        <activity android:name=".LearnBookActivity" />
+        <activity android:name=".LearnPenActivity"></activity>
     </application>
 
 </manifest>
