--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,23 +14,22 @@
         android:roundIcon="@drawable/owl"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".BeginActivity" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".CameraActivity" />
+        <activity android:name=".activity.BeginActivity" />
+        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.CameraActivity" />
         <activity
-            android:name=".CropImageActivity"
+            android:name=".activity.CropImageActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity android:name=".HistoryActivity" />
-        <activity android:name=".ViewHistoryActivity" />
-        <activity android:name=".StartActivity" />
-        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".activity.ViewHistoryActivity" />
+        <activity android:name=".activity.StartActivity" />
+        <activity android:name=".activity.RegisterActivity"></activity>
     </application>
 
 </manifest>
