--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,21 +15,21 @@
         android:supportsRtl="true"
         android:largeHeap="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".StartActivity">
+        <activity android:name=".activity.StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".BeginActivity" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".CameraActivity" />
+        <activity android:name=".activity.BeginActivity" />
+        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.CameraActivity" />
         <activity
-            android:name=".CropImageActivity"
+            android:name=".activity.CropImageActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity android:name=".HistoryActivity" />
-        <activity android:name=".ViewHistoryActivity"></activity>
+        <activity android:name=".activity.HistoryActivity" />
+        <activity android:name=".activity.ViewHistoryActivity"></activity>
     </application>
 
 </manifest>
